# simon

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  cross.toml
.github/workflows/: ci.yml  docker.yml  release.yml
docs/: ALERTS.md  CONFIGURATION.md  README.md  SCREENSHOTS.md  SETUP.md
src/: alerts.rs  auth.rs  collect_info.rs  config.rs  db.rs  endpoints.rs  logging.rs  main.rs  models.rs  pinger.rs
web/: eslint.config.js  package.json  vite.config.ts
web/src/lib/: Chart.svelte  CpuChart.svelte  api.ts  docker_socket.svelte.ts  fileExtensions.ts  general_socket.svelte.ts  highlightjs-line-numbers.d.ts  process_socket.svelte.ts  style-docker.css  style-files.css  style-settings.css  style.css  types.ts  utils.svelte.ts  utils.ts  ws_store.svelte.ts
web/src/routes/: +error.svelte
web/src/routes/(main)/: +layout.svelte  +page.svelte
web/src/routes/(main)/docker/: +page.svelte
web/src/routes/(main)/files/: +page.svelte
web/src/routes/(main)/graphs/: +page.svelte
web/src/routes/(main)/network/: +page.svelte
web/src/routes/(main)/pinger/: +page.svelte
web/src/routes/(main)/storage/: +page.svelte
web/src/routes/(settings)/: +layout.svelte
web/src/routes/(settings)/alerts/: +page.svelte
web/src/routes/(settings)/notif_methods/: +page.svelte
web/static/: auth.html
