[package]
name = "simon"
version = "0.3.1"
edition = "2024"

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
strip = true

[dependencies]
axum = { version = "^0.8", features = ["ws", "multipart"] }
tokio = { version = "^1.0", features = ["full", "macros"] }
serde = { version = "^1.0", features = ["derive"] }
sysinfo = "^0.38"
futures = "^0.3"
serde_json = "^1.0"
tower-http = { version = "0.6.1", features = ["compression-full", "decompression-full"] }
bollard = "^0.20"
futures-util = "^0.3"
rusqlite = { version = "^0.37", features = ["bundled"] }
chrono = "^0.4"
flate2 = "^1.1.0"
tower = "^0.5.2"
clap = { version = "^4.5", features = ["derive", "env"] }
jsonwebtoken = "^10.3"
rand = "^0.9"
bcrypt = "0.17.0"
uuid = {version = "1.16.0", features = ["v4"]}
log = "^0.4"
env_logger = "0.11"
reqwest = { version = "^0.13", default-features = false, features = ["native-tls"] }
openssl = { version = "0.10.74", features = ["vendored"] }
rust-embed = "8.8.0"
hex = "0.4.3"
mime_guess = "2.0.5"
