[package]
name = "simon"
version = "0.3.4"
edition = "2024"

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
strip = true

[dependencies]
axum = { version = "^0.8", features = ["ws", "multipart"] }
tokio = { version = "^1.0", features = ["full", "macros"] }
tokio-util = { version = "^0.7", features = ["io"] }
serde = { version = "^1.0", features = ["derive"] }
sysinfo = "^0.39"
futures = "^0.3"
serde_json = "^1.0"
tower-http = { version = "0.6.1", features = ["compression-full", "decompression-full", "fs"] }
bollard = "^0.21"
futures-util = "^0.3"
rusqlite = { version = "^0.40", features = ["bundled"] }
chrono = "^0.4"
flate2 = "^1.1.0"
tower = "^0.5.2"
clap = { version = "^4.5", features = ["derive", "env"] }
jsonwebtoken = { version = "^10.3", features = ["aws_lc_rs"] }
rand = "^0.10"
bcrypt = "^0.19"
uuid = {version = "1.16.0", features = ["v4"]}
log = "^0.4"
env_logger = "0.11"
reqwest = { version = "^0.13" }
rust-embed = "8.8.0"
hex = "0.4.3"
mime_guess = "2.0.5"
